RESOLVED FIXED 112003
[EFL] accessibility/loading-iframe-sends-notification.html is failing
https://bugs.webkit.org/show_bug.cgi?id=112003
Summary [EFL] accessibility/loading-iframe-sends-notification.html is failing
Krzysztof Czech
Reported 2013-03-11 07:25:49 PDT
accessibility/loading-iframe-sends-notification.html is failing on all EFL platforms.
Attachments
Patch (6.73 KB, patch)
2013-09-25 01:31 PDT, Krzysztof Czech
mario: review-
Patch (6.65 KB, patch)
2013-09-25 02:14 PDT, Krzysztof Czech
no flags
Denis Nomiyama (dnomi)
Comment 1 2013-09-24 07:30:06 PDT
Hi, this issue has been fixed on the GTK port, both on WebKit1 (bug 98370) and WebKit2 (bug 121674). For the EFL port to work, please enable the EFL guards in the following files: - Source/WebCore/dom/Document.cpp at Document::implicitClose() To send notifications for AXObjectCache::AXLayoutComplete. - Source/WebCore/page/FrameView.cpp at FrameView::layout() To send notifications for AXObjectCache::AXLayoutComplete. - Tools/WebKitTestRunner/InjectedBundle/AccessibilityController.cpp To disable stub implementations of addNotificationListener() and removeNotificationListener(). - Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityControllerAtk.cpp To enable actual implementations of addNotificationListener() and removeNotificationListener() for ATK.
Krzysztof Czech
Comment 2 2013-09-24 07:43:14 PDT
Hi, I've already noticed this issue has been fixed. I will propose a patch. Thanks.
Krzysztof Czech
Comment 3 2013-09-25 01:31:59 PDT
Mario Sanchez Prada
Comment 4 2013-09-25 01:45:18 PDT
Comment on attachment 212541 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=212541&action=review > Source/WebCore/dom/Document.cpp:2487 > +#if PLATFORM(MAC) || PLATFORM(WIN) || PLATFORM(GTK) || (PLATFORM(EFL) && HAVE(ACCESSIBILITY)) There are dummy implementations in AXObjectCache if !HAVE(ACCESSIBILITY), so you do not need to add that condition there. Just adding "|| PLATFORM(EFL)" should be enough > Source/WebCore/page/FrameView.cpp:1328 > +#if PLATFORM(MAC) || PLATFORM(WIN) || PLATFORM(GTK) || (PLATFORM(EFL) && HAVE(ACCESSIBILITY)) Ditto.
Krzysztof Czech
Comment 5 2013-09-25 02:14:04 PDT
Krzysztof Czech
Comment 6 2013-09-25 02:15:03 PDT
> > Source/WebCore/dom/Document.cpp:2487 > > +#if PLATFORM(MAC) || PLATFORM(WIN) || PLATFORM(GTK) || (PLATFORM(EFL) && HAVE(ACCESSIBILITY)) > > There are dummy implementations in AXObjectCache if !HAVE(ACCESSIBILITY), so you do not need to add that condition there. Just adding "|| PLATFORM(EFL)" should be enough > > > Source/WebCore/page/FrameView.cpp:1328 > > +#if PLATFORM(MAC) || PLATFORM(WIN) || PLATFORM(GTK) || (PLATFORM(EFL) && HAVE(ACCESSIBILITY)) > > Ditto. Indeed, corrected. Thanks
Mario Sanchez Prada
Comment 7 2013-09-25 03:37:44 PDT
Comment on attachment 212544 [details] Patch thanks
WebKit Commit Bot
Comment 8 2013-09-25 04:01:13 PDT
Comment on attachment 212544 [details] Patch Clearing flags on attachment: 212544 Committed r156386: <http://trac.webkit.org/changeset/156386>
WebKit Commit Bot
Comment 9 2013-09-25 04:01:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.