[EFL] accessibility/loading-iframe-sends-notification.html is failing https://bugs.webkit.org/show_bug.cgi?id=112003

Patch by Krzysztof Czech <k.czech@samsung.com> on 2013-09-25
Reviewed by Mario Sanchez Prada.

Source/WebCore:

Enabled AXLayoutComplete on EFL platform.

* dom/Document.cpp:
(WebCore::Document::implicitClose):
* page/FrameView.cpp:
(WebCore::FrameView::layout):

Tools:

Enabled addNotificationListener and removeNotificationListener for EFL port.

* WebKitTestRunner/InjectedBundle/AccessibilityController.cpp:
* WebKitTestRunner/InjectedBundle/atk/AccessibilityControllerAtk.cpp:
(WTR::AccessibilityController::removeNotificationListener):

LayoutTests:

* platform/efl-wk1/TestExpectations: Removed loading-iframe-sends-notification.html.
* platform/efl-wk2/TestExpectations: Removed loading-iframe-sends-notification.html.

Canonical link: https://commits.webkit.org/139891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156386 268f45cc-cd09-0410-ab3c-d52691b4dbfc